# game-cards-microservices

./: .gitignore  README.md  docker-compose.yml
migration/: README.md  shmig
migration/migrations/: 1625547564-match_result_histories.sql  1625596220-match_result_histories_index.sql
nginx/: default.conf
services/game-matching-cards/: Dockerfile  main.py  pyproject.toml
services/game-matching-cards-summary/: Dockerfile  go.mod  go.sum
services/game-matching-cards-summary/api/summary-server/: api.go  handler.go  middleware.go
services/game-matching-cards-summary/cmd/result-consumer/: main.go
services/game-matching-cards-summary/cmd/summary-cache-job/: main.go
services/game-matching-cards-summary/cmd/summary-server/: main.go
services/game-matching-cards-summary/internal/match-result/: match-result.go  setter.go
services/game-matching-cards-summary/internal/summary-cache/: summary.go
services/game-matching-cards/api/: matching_cards.py  matching_cards_model.py
services/game-matching-cards/exception/: exception.py
services/game-matching-cards/internal/: cache.py  matching_cards.py  matching_cards_model.py  mq.py
services/game-matching-cards/pkg/: cache.py  mq.py
services/web-client/: Dockerfile  next.config.js  package-lock.json  package.json
services/web-client/coomponents/: game-matching-cards-dashboard.tsx  game-matching-cards.tsx
services/web-client/middlewares/: auth.ts
services/web-client/ns/: game.ts  index.ts
services/web-client/pages/: _app.tsx  _error.tsx  games.tsx  index.tsx  login.tsx
(+4 files in other folders)
